src/main/java/com/example/autorepairshop/error/ErrorResponse.java
package com.example.autorepairshop.error;

import lombok.Builder;
import org.springframework.http.HttpStatus;

@Builder
record ErrorResponse (String message, HttpStatus status) {
}
